DFC-172 Membership: Tablet Portrait: Text Overlap fixed

--- a/sites/all/themes/custom/dfc/css/dfc.no-query.css
+++ b/sites/all/themes/custom/dfc/css/dfc.no-query.css
@@ -3760,7 +3760,7 @@ body.node-type-landing-page.section-media .l-main {
 
 /* line 484, C:/xampp/htdocs/dollar-fishing/sites/all/themes/custom/dfc/sass/components/_page-membership.scss */
 .view-memberships .quicktabs_main .quicktabs-tabpage:nth-of-type(2) .views-field-body h2 {
-  margin-bottom: 10px; }
+  /*margin-bottom: 10px;*/ }
 
 /* line 488, C:/xampp/htdocs/dollar-fishing/sites/all/themes/custom/dfc/sass/components/_page-membership.scss */
 .view-memberships .quicktabs_main .quicktabs-tabpage:nth-of-type(2) .views-field-body h3 {
@@ -3772,7 +3772,7 @@ body.node-type-landing-page.section-media .l-main {
 
 /* line 502, C:/xampp/htdocs/dollar-fishing/sites/all/themes/custom/dfc/sass/components/_page-membership.scss */
 .view-memberships .quicktabs_main .quicktabs-tabpage:nth-of-type(3) .views-field-body h2 {
-  margin-bottom: 10px; }
+  /*margin-bottom: 10px;*/ }
 
 /* line 506, C:/xampp/htdocs/dollar-fishing/sites/all/themes/custom/dfc/sass/components/_page-membership.scss */
 .view-memberships .quicktabs_main .quicktabs-tabpage:nth-of-type(3) .views-field-body h3 {
