--- a/sites/all/themes/custom/dfc/sass/components/_page-membership.scss
+++ b/sites/all/themes/custom/dfc/sass/components/_page-membership.scss
@@ -482,7 +482,7 @@ top: 0;
         .views-field-body {
       
           h2 {
-            margin-bottom: 10px;
+            /*margin-bottom: 10px;*/
           }
       
           h3 {
@@ -500,7 +500,7 @@ top: 0;
         .views-field-body {
       
           h2 {
-            margin-bottom: 10px;
+            /*margin-bottom: 10px;*/
           }
       
           h3 {
@@ -655,3 +655,8 @@ top: 0;
     background: $color-platinum;
   }
 }
+
+
+
+
+
